# nix4vscode

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .taplo.toml  CHANGELOG.md  Cargo.toml  README.md  biome.jsonc  config.toml  db.sqlite3.tar.xz  flake.nix  package.json  release-please-config.json  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: build-example.yml  build.yml  build.yml.bak  check-example.yml  check-flake.yml  check-unittest.yml  check.yml  depbot-auto-meger.yml  depbot_auto_meger.yaml  deploy-playground.yml  export-openvsx.yml  export-vscode.yml  exporter.yml  exporter_hash.yml  exporter_openvsx.yml  gate.yml  nightly.yml  release.yml  release_please.yaml
crates/code_api/: Cargo.toml  build.rs
crates/code_api/doc/: vscode.adoc
crates/code_api/idl/: gallery.idl  gallery_support.idl
crates/code_api/src/: code.rs  config.rs  lib.rs  version.rs
crates/code_api/src/code/: enums.rs  extensions.rs  flags.rs  gallery_extension.rs  http_client.rs  query.rs  request_body.rs  version.rs
crates/code_api/src/code/gallery_extension/: extension_version.rs  version.rs
crates/code_api/src/version/: test.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/exporter/: Cargo.toml  example.nix  flake.nix  version-utils-test.nix  version-utils.nix  vscode-engine-overlay.nix
crates/exporter/bindings/: ExportedData.ts
crates/exporter/migrations/2025-03-09-090821_marketplace/: down.sql  up.sql
crates/exporter/migrations/2025-03-18-135712_marketplace/: up.sql
crates/exporter/nix/: version-utils-test.nix  version-utils.nix  version-utils.test.nix  version.nix  vscode-engine-overlay.nix  vscode.nix
crates/exporter/src/: codellab.rs  export.rs  exporter.rs  fetch_hash.rs  fetch_info.rs  main.rs  mini_json.rs  mini_toml.rs  models.rs  schema.rs  serde_nix.rs  utils.rs
crates/exporter/src/export/: data.rs
crates/exporter/src/exporter/: data.rs  mini_json.rs  mini_toml.rs
crates/nix32/: Cargo.toml  README.md
data/: extensions.json  extensions_openvsx.json
data/openvsx/: data_0.json  data_1.json  data_10.json  data_100.json  data_101.json  data_102.json  data_103.json  data_104.json  data_105.json  data_106.json  data_107.json  data_108.json  data_109.json  data_11.json  data_110.json  data_111.json  data_112.json  data_113.json  data_114.json  data_115.json  data_116.json  data_117.json  data_118.json  data_119.json  data_12.json  data_120.json  data_121.json  data_122.json  data_123.json  data_124.json  data_125.json  data_126.json  data_127.json  data_13.json  data_14.json  data_15.json  data_16.json  data_17.json  data_18.json  data_19.json  (+88 more)
data/vscode/: data_0.json  data_1.json  data_10.json  data_100.json  data_101.json  data_102.json  data_103.json  data_104.json  data_105.json  data_106.json  data_107.json  data_108.json  data_109.json  data_11.json  data_110.json  data_111.json  data_112.json  data_113.json  data_114.json  data_115.json  data_116.json  data_117.json  data_118.json  data_119.json  data_12.json  data_120.json  data_121.json  data_122.json  data_123.json  data_124.json  data_125.json  data_126.json  data_127.json  data_13.json  data_14.json  data_15.json  data_16.json  data_17.json  data_18.json  data_19.json  (+88 more)
derive/: Cargo.toml
example/: Makefile  flake.nix  home.nix  vscode_plugins.nix
miniscrapy/: Cargo.toml
miniscrapy/src/: engine.rs  error.rs  lib.rs  traits.rs
miniscrapy/src/draft/: schedular.rs
miniscrapy/src/engine/: downloader.rs  item_pipeline.rs
nix/: example.nix  extensionsFromInfo.nix  forVscodeVersionRaw.nix  getExtensionUrl.nix  matchesVscodeVersion.nix  package.nix  version.nix  version.test.nix  vscode.nix
nix/decorators/: ms-vscode.cpptools.nix  sumneko.lua.nix
nix/fetchurl/: builder.sh  fetchurl.nix  test.nix
nix/vscode-utils/: default.nix
openvsx/: Cargo.toml  README.md
openvsx/.openapi-generator/: FILES
openvsx/docs/: Badge.md  Extension.md  ExtensionReference.md  Namespace.md  NamespaceDetails.md  NamespaceMembershipJson.md  NamespaceMembershipList.md  QueryParam.md  QueryResult.md  RegistryApiApi.md  Result.md  Review.md  ReviewList.md  SearchEntry.md  SearchResult.md  User.md  VerifyToken200Response.md  VersionReference.md  VersionReferences.md  Versions.md
openvsx/schema/: openvsx.json
openvsx/src/apis/: configuration.rs  mod.rs  registry_api_api.rs
openvsx/src/models/: badge.rs  extension.rs  extension_reference.rs  mod.rs  namespace.rs  namespace_details.rs  namespace_membership_json.rs  namespace_membership_list.rs  query_param.rs  query_result.rs  result.rs  review.rs  review_list.rs  search_entry.rs  search_result.rs  user.rs  verify_token_200_response.rs  version_reference.rs  version_references.rs  versions.rs
playground/: .npmrc  astro.config.mjs  astro.config.ts  components.json  package.json  pnpm-lock.yaml  tsconfig.json
scripts/: README.md  deno.json  main.d.ts  main.ts  out.js  package.json  parse_args.ts  pnpm-lock.yaml  tsconfig.json  types.ts  utils.test.ts  utils.ts
scripts/quickjs/: globals.d.ts  index.d.ts  os.d.ts  std.d.ts
scripts/src/: main.ts  types.ts  utils.test.ts  utils.ts  version.ts
src/: code.rs  config.rs  data.rs  data_struct.rs  db.rs  dump.rs  engine_version.rs  error.rs  jinja.rs  main.rs  openvsx_ext.rs  request.rs  utils.rs  version.rs
src/code/: enums.rs  extensions.rs  gallery_extension.rs  http_client.rs  query.rs  version.rs
tests/: default.nix  getExtensionUrl.nix  matchesVscodeVersion.nix  upstreamVersionTests.nix
vscode/: Cargo.toml
vscode/datas/: manifest.jsonc  search.jsonc
vscode/src/: apis.rs  lib.rs  models.rs
vscode/src/apis/: configuration.rs  registry_api_api.rs
vscode/src/models/: enums.rs  extension.rs  extension_file.rs  extension_management.rs  extension_property.rs  extension_publisher.rs  extension_statistics.rs  extension_version.rs  extensions.rs  flags.rs  gallery_extension.rs  icriterium.rs  query.rs  query_state.rs  request_body.rs  version.rs
vscode/vscode_derive/: Cargo.toml
vscode/vscode_derive/src/: lib.rs
(+41 files in other folders)
