[package]
name = "nix4vscode"
description = "A tool to prefetch VS Code extensions for Nix expressions"
readme = "README.md"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["nix"]
repository = "https://github.com/nix-community/nix4vscode"
homepage = "https://github.com/nix-community/nix4vscode"
authors = ["Loongtao Zhang <loongtao.zhang@outlook.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive", "alloc", "rc"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.41", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
semver = "1.0"
bitflags = { version = "2.6", features = ["serde", "std"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "gzip",
  "json",
] }
minijinja = { version = "2.5", features = ["loader"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
anyhow = "1.0"
nixpkgs-fmt = "1.3"
redb = "2.2"
thiserror = "2.0"
lazy-regex = "3.4"
chrono = "0.4"
derive = { path = "./derive" }
lazy_static = "1.5"
rust-embed = "8.5"

[package.metadata.deb]
assets = [
  [
    "target/release/nix4vscode",
    "usr/bin/",
    "755",
  ],
  [
    "README.md",
    "usr/share/doc/nix4vscode/",
    "644",
  ],
  [
    "LICENSE",
    "usr/share/doc/nix4vscode/",
    "644",
  ],
]
priority = "optional"
section = "utils"

[profile.release]
strip = true
