[package]
name = "nix4vscode"
description = "A tool to prefetch VS Code extensions for Nix expressions"
readme = "README.md"
version = "0.0.4"
edition = "2021"
license = "Apache-2.0"
keywords = ["nix"]
repository = "https://github.com/nix-community/nix4vscode"
homepage = "https://github.com/nix-community/nix4vscode"
authors = ["Loongtao Zhang <loongtao.zhang@outlook.com>"]

[workspace.dependencies]
futures = "0.3"
semver = "1.0"
tracing = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
lazy-regex = "3.4"
chrono = "0.4"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

tracing = { workspace = true }
tokio = { version = "1.43", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = { workspace = true }

semver = { workspace = true }
minijinja = { version = "2.7", features = ["loader"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
nixpkgs-fmt = "1.3"
redb = "2.4"
thiserror = "2.0"
lazy-regex = { workspace = true }
derive = { path = "./crates/derive" }
code-api = { path = "./crates/code_api" }
rust-embed = "8.6"
rusqlite = { version = "0.32", features = ["bundled"] }
itertools = "0.14.0"

[package.metadata.deb]
assets = [
  [
    "target/release/nix4vscode",
    "usr/bin/",
    "755",
  ],
  [
    "README.md",
    "usr/share/doc/nix4vscode/",
    "644",
  ],
  [
    "LICENSE",
    "usr/share/doc/nix4vscode/",
    "644",
  ],
]
priority = "optional"
section = "utils"

[profile.release]
strip = true
