[workspace]
resolver = "2"
members = ["crates/code_api", "crates/exporter", "crates/nix32"]

[workspace.dependencies]
futures = "0.3"
tokio = { version = "1.47", features = ["full"] }
semver = "1.0"
tracing = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
lazy-regex = "3.4"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
strip = true
