[package]
name    = "miniscrapy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest     = "0.11.22"
async-trait = "0.1.74"
serde_json  = "1.0.108"
log         = "0.4.20"
tokio       = { version = "1.34.0", features = ["full"] }
parking_lot = "0.12.1"
