[package]
name        = "openvsx"
version     = "0.1.0"
authors     = ["OpenAPI Generator team and contributors"]
description = "This API provides metadata of VS Code extensions in the Open VSX Registry as well as means to publish extensions."
license     = "Eclipse Public License 2.0"
edition     = "2018"

[dependencies]
serde        = "^1.0"
serde_derive = "^1.0"
serde_json   = "^1.0"
url          = "^2.2"
uuid         = { version = "^1.0", features = ["serde", "v4"] }
[dependencies.reqwest]
version  = "^0.11"
features = ["json", "multipart"]
