[package]
name = "vscode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.4.1", features = ["serde", "std"] }
reqwest = { version = "0.11.22", default-features = false, features = [
    "rustls-tls",
    "json",
    "gzip",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
vscode_derive = { path = "./vscode_derive" }
