[package]
name = "vscode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.4.2", features = ["serde", "std"] }
reqwest = { version = "0.11.24", default-features = false, features = [
  "rustls-tls",
  "json",
  "gzip",
] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
vscode_derive = { path = "./vscode_derive" }
anyhow = "1.0.79"

[dev-dependencies]
tokio = "1.36.0"
