[package]
name = "code-api"
version = "0.0.11"
edition = "2021"

[dependencies]
futures = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
bitflags = { version = "2.10", features = ["serde", "std"] }
async-stream = "0.3"
serde_json = { workspace = true }
chrono = { workspace = true }
lazy-regex = { workspace = true }
reqwest = { version = "0.13", features = ["gzip"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
xidl-rust-axum = "0.77.0"

itertools = "0.14.0"
serde_with = "3.17.0"

[build-dependencies]
xidl-build = "0.77.0"
