[package]
name = "exporter"
version = "0.0.11"
edition = "2024"

[features]
default = ["display"]
display = []

[dependencies]
dotenvy = "0.15"
anyhow.workspace = true
clap = { version = "4.5.48", features = ["derive"] }
diesel = { version = "2.2.12", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
] }
tokio = { version = "1.47.1", features = ["full"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
code-api = { path = "../code_api" }
futures.workspace = true
serde.workspace = true
serde_json = "1.0.145"
toml = "0.9.4"
toml_edit = "0.23.2"
lazy-regex = "3.4.1"
itertools = "0.14.0"
ts-rs = "11.1.0"
octocrab = "0.44.1"
