[package]
name = "exporter"
version = "0.0.11"
edition = "2024"

[dependencies]
dotenvy = "0.15"
anyhow.workspace = true
clap = { version = "4.6.0", features = ["derive"] }
diesel = { version = "2.3.7", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
] }
tokio = { version = "1.50.0", features = ["full"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
code-api = { path = "../code_api" }
futures.workspace = true
serde.workspace = true
serde_json = "1.0.149"
toml = "1.1.2"
toml_edit = "0.25.12"
lazy-regex = "3.6.0"
itertools = "0.14.0"
octocrab = "0.53.1"
crown = { version = "0.20.0", default-features = false, features = ["alloc"] }
